--- a/lib/talky_web/live/page_live.html.leex
+++ b/lib/talky_web/live/page_live.html.leex
@@ -1,7 +1,13 @@
 <section class="bg-gradient-to-r from-pink-600 to-yellow-300 pt-12">
   <div class="container mx-auto py-12 flex justify-between">
     <div class="pl-2 md:w-2/5 flex flex-col justify-center">
-      <p class="uppercase tracking-tighter w-full text-white pl-1">Next generation AI chatbot</p>
+      <p class="uppercase tracking-tighter w-full text-white pl-1">
+        Next generation AI chatbot
+        <span class="mx-2">•</span>
+        <a class="hover:text-blue-600 transition-colors duration-150" href="https://github.com/dev-cyprium/talky" target="_blank" rel="noopener">
+          <i class="lni lni-github-original text-xl"></i>
+        </a>
+      </p>
       <h1 class="text-white text-5xl font-bold leading-tight my-2">Start using AI bots right now!</h1>
       <p class="text-white leading-normal text-2xl">
         In just a few easy steps, automate customer support in no time!
