add user signup process

--- a/lib/talky_web/templates/layout/app.html.eex
+++ b/lib/talky_web/templates/layout/app.html.eex
@@ -1,4 +1,22 @@
-<main role="main" class="container">
+
+<%= if get_flash(@conn, :info) do %>
+<div class="absolute top-0 right-0 p-4 overflow-x-hidden z-50">
+  <div
+    x-data="{ open: true }"
+    x-init="setTimeout(() => { open = false }, 2000)"
+    x-show="open"
+    class="bg-gray-900 bg-gradient-to-r text-white p-3 rounded mb-3 shadow-lg flex items-center from-blue-500 to-blue-600">
+    <svg class="w-6 h-6 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+      <path fill-rule="evenodd"
+        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+        clip-rule="evenodd" />
+    </svg>
+    <p><%= get_flash(@conn, :info) %></p>
+  </div>
+</div>
+<% end %>
+
+<main role="main">
   <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
   <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
   <%= @inner_content %>
