--- a/lib/talky_web/live/bots_live.html.leex
+++ b/lib/talky_web/live/bots_live.html.leex
@@ -1,14 +1,16 @@
 <div class="p-10">
   <div class="flex mb-4">
-    <h1 class="text-4xl">Manage your Bots</h1>
+    <h1 class="text-4xl">Manage your Bots (<%= @mode %>)</h1>
   </div>
 
   <div class="bg-blue-50 p-4 rounded-md">
     <p>
       Looks like you don't have any bots at the moment. Try creating a new one!
     </p>
-    <button class="text-white bg-blue-600 p-2 rounded-md text-left self-start my-4">
-      Create New bot
-    </button>
+    <%= live_patch to: "/bots/new" do %>
+      <button class="text-white bg-blue-600 p-2 rounded-md text-left self-start my-4">
+        Create New bot
+      </button>
+    <% end %>
   </div>
 </div>
