--- a/lib/talky_web/templates/layout/live.html.leex
+++ b/lib/talky_web/templates/layout/live.html.leex
@@ -1,5 +1,5 @@
 <main role="main" class="flex">
-  <aside class="bg-pink-600 w-1/5 h-screen">
+  <aside class="bg-pink-600 w-1/5 min-h-screen">
     <nav>
       <ul>
         <li class="py-1 pl-2">
