--- a/lib/talky_web/live/bots_live.html.leex
+++ b/lib/talky_web/live/bots_live.html.leex
@@ -1,6 +1,6 @@
 <div class="p-10">
   <div class="flex mb-4">
-    <h1 class="text-4xl">Manage your Bots (<%= @mode %>)</h1>
+    <h1 class="text-4xl">Manage your Bots</h1>
   </div>
 
   <div class="bg-blue-50 p-4 rounded-md">
